--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                                     target="_blank">Yale Song</a><sup>2</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="#" target="_blank">Xiyu Wei</a><sup>1</sup>,
+                                <a href="https://scholar.google.com/citations?user=J_RHFhUAAAAJ&hl=en&oi=ao"
+                                    target="_blank">Xiyu Wei</a><sup>1</sup>,
                             </span>
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=RvBDhSwAAAAJ&hl=en&oi=ao"
